# htrk

./: .gitignore  CMakeLists.txt  Cargo.toml
htrk/: Cargo.toml
htrk/src/: discovery.rs  lib.rs
htrkapi/: Cargo.toml
htrkapi/src/: c.rs  lib.rs
htrkapi/src/c/: string.rs  types.rs
htrktool/: Cargo.toml
htrktool/src/: main.rs
test-c/: CMakeLists.txt
test-c/src/: main.c
